# ipc

./: .clang-format  .gitignore  LICENSE  README.md  meson.build
.github/workflows/: build_and_test.yml
scripts/: clang-format.sh
src/: Client.cpp  Client.h  Common.h  IpcClient.cpp  IpcClient.h  IpcMessage.cpp  IpcMessage.h  IpcServer.cpp  IpcServer.h  Message.cpp  Message.h  Server.cpp  Server.h
tests/: main.cpp  meson.build
